doc(README.md): update README.md